force-app/main/default/objects/PHSS_Custom_Settings__c/PHSS_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PHSS Custom Settings</label>
</CustomObject>