force-app/main/default/objects/PHSS_Custom_Settings__c/fields/Account_Owner_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_User_Name__c</fullName>
    <description>User name to be used when creating new accounts for B2C community users (when required).  Legacy name of this user is &#39;Salesforce Automation Account&#39;.</description>
    <label>Account Owner User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>