force-app/main/default/objects/PHSS_Custom_Settings__c/fields/AWS_Export_Accounts_Excluded__c.field-meta.xml
<CustomField>
    <fullName>AWS_Export_Accounts_Excluded__c</fullName>
    <description>Accounts to be excluded from certificate export to AWS (achievement assignments of type Certificate).  Separate Account Ids with commas.</description>
    <label>AWS Export Accounts Excluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>