force-app/main/default/objects/PHSS_Custom_Settings__c/fields/Bucket_Account_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Account_Number_Suffix__c</fullName>
    <label>Bucket Account Number Suffix</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>