force-app/main/default/objects/PHSS_Custom_Settings__c/fields/Claimed_Voucher_Status_Codes__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Voucher_Status_Codes__c</fullName>
    <description>Separate values with semicolons</description>
    <label>Claimed Voucher Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>