force-app/main/default/objects/PHSS_Custom_Settings__c/fields/Current_Bucket_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Bucket_Account_ID__c</fullName>
    <label>Current Bucket Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>